--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <section>
         <h2>About Me</h2>
-        <p>Hello! My name is Darren Dong, and I’m excited to share this simple website with you. I enjoy learning about Math and Computer Science. In my free time I enjoy playing video games as well as practicing Piano and Guitar.</p>
+        <p>Hello! My name is Darren Dong, and I’m excited to shafsre this simple website with you. I enjoy learning about Math and Computer Science. In my free time I enjoy playing video games as well as practicing Piano and Guitar.</p>
         <p>This website is a small step toward showcasing my skills and experiments with coding. Stay tuned for more updates and improvements!</p>
     </section>
     <section>
