--- a/utahtech2/index.html
+++ b/utahtech2/index.html
@@ -10,5 +10,8 @@
     <Paragraph> 
         kfjdslsdfklj
     </Paragraph>
+    <ul>
+        <li><a href="utahtech2/index.html">Utah Tech 2</a></li>
+    </ul>
 </body>
 </html>
