--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -2,17 +2,19 @@
 <meta name="robots" content="noindex, nofollow">
 <html>
 <head>
-    <title>milestone1</title>
+    <title>milestone name</title>
 </head>
 <body>
-    <Header>
-        fjf
-    </Header>
-    <Paragraph> 
-        kfjdslsdfklj
-    </Paragraph>
-    <ul>
-        <li><a href="utahtech2/index.html">Utah Tech 2</a></li>
-    </ul>
+    <header>
+        <h1>Name of My Website</h1>
+    </header>
+    <nav>
+        <a href="index.html"> Home </a> &nbsp; &nbsp;
+        <a href="competition.html"> Home </a> &nbsp; &nbsp;
+        <a href="audience.html"> Home </a> &nbsp; &nbsp;
+    </nav>
+
+    <main></main>
+    <footer></footer>
 </body>
 </html>
