--- a/milestone1/audience.html
+++ b/milestone1/audience.html
@@ -14,19 +14,13 @@
         <a href="audience.html"> Home </a> &nbsp; &nbsp;
     </nav>
     <main>
-        <h2>Website Summary</h2>
-        <h2>What content will the site contain?</h2>
-        <p></p>
-        <h2>here will you get all of the content for your site (ie. images & text)?</h2>
-        <p></p>
-        <h2>Why should users care about the focus of the site?</h2>
-        <p></p>
-        <h2>Why should a site be built for this?</h2>
-        <p></p>
-        <h2>What would you like users to do at your site?</h2>
-        <p></p>
-        <h2>What is the goal of the site?</h2>
-        <p></p>
+        <h2>Audience Summary</h2>
+        <h4>Geolocation</h4>
+        <p>St.Geroge Utah is my primary audience.</p>
+        <h4>Age</h4>
+        <p>20-40 Years</p>
+        <h4>Gender</h4>
+        <p>Not applicable</p>
     </main>
     <footer></footer>
 </body>
